# jsontolang-monorepo

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  turbo.json
.claude/skills/react-monorepo/: SKILL.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
apps/web/: .gitignore  .prettierignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: main.tsx  routeTree.gen.ts
apps/web/src/components/: code-editor.tsx  nav.tsx
apps/web/src/hooks/: use-media-query.ts
apps/web/src/hooks/jsontolang/: use-jsontolang.ts
apps/web/src/libs/: plugins.ts  router.ts  site.ts
apps/web/src/routes/: __root.tsx  index.tsx  playground.tsx  plugins.tsx
apps/web/src/types/: jsontolang.ts
crates/cli/: Cargo.toml
crates/cli/plugins/: go.lua  rust.lua  typescript.lua
crates/cli/src/: cli.rs  input.rs  lib.rs  main.rs
crates/cli/src/plugins/: lua_plugin.rs  mod.rs
crates/cli/tests/: cli.rs  plugin_output.rs  render_parity.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  schema.rs
crates/core/src/render/: go.rs  mod.rs  rust.rs  typescript.rs
crates/core/tests/: render.rs  schema_inference.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/wasm/: Cargo.toml  package.json
crates/wasm/src/: lib.rs
docs/: jsontolang-monorepo-plan.md
docs/superpowers/plans/: 2026-07-19-lua-plugins.md
docs/superpowers/specs/: 2026-07-18-lua-plugins-design.md
scripts/: check.sh
(+10 files in other folders)
