[package]
name = "jsontolang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.41", features = ["derive"] }
jsontolang-core = { workspace = true }
mlua = { version = "0.12", features = ["lua54", "vendored", "serialize"] }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.20.0"
